[gd_scene load_steps=34 format=2]

[ext_resource path="res://resources/Type Machine.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/sad_icon.png" type="Texture" id=2]
[ext_resource path="res://images/water_animation/shower_high/shower_high.tres" type="Texture" id=3]
[ext_resource path="res://images/pipes/end_right_cap_2.png" type="Texture" id=4]
[ext_resource path="res://images/pipes/straight_cap_2.png" type="Texture" id=5]
[ext_resource path="res://images/pipes/end_left_cap_2.png" type="Texture" id=6]
[ext_resource path="res://images/happy_icon.png" type="Texture" id=7]
[ext_resource path="res://images/water_animation/cap_2/cap_2.tres" type="Texture" id=8]
[ext_resource path="res://images/watersource.png" type="Texture" id=9]
[ext_resource path="res://levels/Level_1.gd" type="Script" id=10]
[ext_resource path="res://images/soap_animation/soap_full/soap_full.tres" type="Texture" id=11]
[ext_resource path="res://resources/score_label.tres" type="StyleBox" id=12]
[ext_resource path="res://images/showerhead.png" type="Texture" id=13]
[ext_resource path="res://images/pipes/red_pipe_bg1.png" type="Texture" id=14]
[ext_resource path="res://images/pipes/pipe_bg.png" type="Texture" id=15]
[ext_resource path="res://images/plus.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 80
outline_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0980392, 0.0862745, 0.0862745, 1 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=1]
0/name = "cap_2.tres 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=2]
0/name = "end_left_cap_2.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 192 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "straight_cap_2.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 192 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "end_right_cap_2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=21]
0/name = "red_pipe_bg1.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "pipe_bg.png 1"
1/texture = ExtResource( 15 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 1 )

[node name="Level_1" type="Node"]
script = ExtResource( 10 )

[node name="Watersource" type="Sprite" parent="."]
position = Vector2( 216, 608 )
texture = ExtResource( 9 )

[node name="W_Control" type="Control" parent="Watersource"]
pause_mode = 1
margin_left = -88.0
margin_top = -79.0
margin_right = 96.0
margin_bottom = 85.0

[node name="Message" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 136.0
margin_right = 1724.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 4 )
text = "We can think of sending information over the internet as sending water through a network of pipes. Water will automatically travel through the path of least cost based on the pipes and its capacity.

The cost of pipes cannot be changed while water is flowing."
align = 1
autowrap = true

[node name="Score2" type="Label" parent="."]
visible = false
anchor_right = 0.56
anchor_bottom = 0.252
margin_left = 568.0
margin_top = 86.0
margin_right = 295.88
margin_bottom = 765.84
custom_fonts/font = SubResource( 18 )
custom_styles/normal = ExtResource( 12 )
text = "SCORE"
align = 1
valign = 1

[node name="levelScore" type="Label" parent="."]
visible = false
margin_left = 1257.0
margin_top = 806.0
margin_right = 1853.0
margin_bottom = 1020.0
custom_colors/font_color = Color( 0.333333, 0.0431373, 0.0431373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
align = 1
valign = 1

[node name="Message_Success" type="Label" parent="."]
visible = false
margin_left = 808.0
margin_top = 968.0
margin_right = 1129.0
margin_bottom = 1028.0
custom_fonts/font = SubResource( 15 )
text = "Level complete!"

[node name="Return" type="Button" parent="."]
margin_left = 832.0
margin_top = 792.0
margin_right = 1088.0
margin_bottom = 872.0
custom_fonts/font = SubResource( 5 )
disabled = true
text = "RETURN TO HOME"

[node name="Water" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 1 )
format = 1

[node name="Shower" type="Sprite" parent="."]
position = Vector2( 1648, 560 )
texture = ExtResource( 13 )

[node name="S_Control" type="Control" parent="Shower"]
pause_mode = 1
margin_left = -40.0
margin_top = -32.0
margin_right = 76.0
margin_bottom = 112.0

[node name="High" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 24, 72 )
z_index = 2
texture = ExtResource( 3 )

[node name="Soap" type="Sprite" parent="Shower"]
position = Vector2( 40, 72 )
z_index = 1
texture = ExtResource( 11 )

[node name="Happy" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 44, 80 )
texture = ExtResource( 7 )

[node name="Sad" type="Sprite" parent="Shower"]
position = Vector2( 44, 80 )
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = 1640.0
margin_top = 688.0
margin_right = 1752.0
margin_bottom = 726.0
custom_fonts/font = SubResource( 6 )
align = 1

[node name="Pipes" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 524293, 0, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 2, 0 )

[node name="P_Control" type="Control" parent="Pipes"]
pause_mode = 1
margin_left = 345.0
margin_top = 536.0
margin_right = 1577.0
margin_bottom = 680.0

[node name="bg" type="TileMap" parent="Pipes"]
position = Vector2( 1, 0 )
tile_set = SubResource( 21 )
format = 1
tile_data = PoolIntArray( 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0 )

[node name="Cost" type="Node" parent="."]

[node name="plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1043.0
margin_top = 692.0
margin_right = 1078.36
margin_bottom = 738.24
grow_horizontal = 0
custom_fonts/font = SubResource( 7 )
icon = ExtResource( 16 )

[node name="minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 843.0
margin_top = 692.0
margin_right = 842.36
margin_bottom = 700.24
custom_fonts/font = SubResource( 7 )
text = "-"

[node name="cost" type="Label" parent="Cost"]
margin_left = 843.0
margin_top = 692.0
margin_right = 1075.0
margin_bottom = 748.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="Tooltips" type="CanvasLayer" parent="."]

[node name="W_Panel" type="Panel" parent="Tooltips"]
visible = false
light_mask = 0
margin_left = 104.0
margin_top = 696.0
margin_right = 328.0
margin_bottom = 880.0

[node name="Label" type="Label" parent="Tooltips/W_Panel"]
margin_left = 16.0
margin_top = 14.0
margin_right = 216.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 12 )
text = "WaterSource

Water exits from this body and travels through pipes"
autowrap = true

[node name="S_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1724.0
margin_top = 680.0
margin_right = 1884.0
margin_bottom = 816.0

[node name="Label" type="Label" parent="Tooltips/S_Panel"]
margin_left = 12.0
margin_top = 16.0
margin_right = 140.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 14 )
autowrap = true

[node name="P_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1096.0
margin_top = 726.0
margin_right = 1280.0
margin_bottom = 934.0

[node name="Label" type="Label" parent="Tooltips/P_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 13 )
autowrap = true

[node name="H_Control" type="Control" parent="."]
margin_left = -96.0
margin_top = -64.0
margin_right = -56.0
margin_bottom = -24.0

[node name="Hint" type="Label" parent="H_Control"]
margin_left = 240.0
margin_top = 896.0
margin_right = 672.0
margin_bottom = 1032.0
custom_fonts/font = SubResource( 16 )
text = "At any time, press ESC to pause"
align = 1
autowrap = true

[node name="Button_Hint" type="Button" parent="H_Control"]
margin_left = 672.0
margin_top = 864.0
margin_right = 704.0
margin_bottom = 896.0
custom_fonts/font = SubResource( 17 )
text = "X"

[connection signal="mouse_entered" from="Watersource/W_Control" to="." method="_on_W_Control_mouse_entered"]
[connection signal="mouse_exited" from="Watersource/W_Control" to="." method="_on_W_Control_mouse_exited"]
[connection signal="pressed" from="Return" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Shower/S_Control" to="." method="_on_S_Control_mouse_entered"]
[connection signal="mouse_exited" from="Shower/S_Control" to="." method="_on_S_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P_Control" to="." method="_on_P_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P_Control" to="." method="_on_P_Control_mouse_exited"]
[connection signal="pressed" from="Cost/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Cost/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="H_Control/Button_Hint" to="." method="_on_Button_Hint_pressed"]
